--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "to-do-v2",
-  "homepage": "https://ajshannon.github.io/ToDoV2/",
+  "homepage": "https://ajshannon.github.io/ToDoPart2/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
