--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "to-do-v2",
-  "homepage": "https://ajshannon.github.io/ToDoPart2/",
+  "homepage": "https://ajshannon.github.io/ToDoPart3/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "gh-pages": "^1.2.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
